@@ -249,8 +249,21 @@ window_new_screen_size (int width, int height)
               break;
             }
           else
-            win= win->next;
+            win = win->next;
         }
+    }
+
+  /* One more loop.  If any heights or widths have become negative,
+     set them to zero.  This can apparently happen with resizing down to
+     very small sizes.  Sadly, it is not apparent to me where in the
+     above calculations it goes wrong.  */
+  for (win = windows; win; win = win->next)
+    {
+      if (win->height < 0)
+        win->height = 0;
+
+      if (win->width < 0)
+        win->width = 0;
     }
 }
 
